bk_ida/sjengida/c2/SwitchColor
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/SwitchColor/src/crazy.c:662:8: error: use of undeclared identifier 'dword_418A60'
return dword_418A60[piece]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/SwitchColor/src/obj/crazy.o] Error 1
